--- a/Muebleria/templates/base.html
+++ b/Muebleria/templates/base.html
@@ -16,7 +16,9 @@
          <div class="nav navbar-nav">
              <a class="nav-item nav-link active" href="{% url 'inicio' %}">Inicio </a>
              <a class="nav-item nav-link active" href="{% url 'catalogo' %}">Catalogo </a>
-             <a class="nav-item nav-link active" href="{% url 'info' %}">Info </a>
+             <a class="nav-item nav-link active" href="{% url 'sucursales' %}">Sucursales </a>
+             <a class="nav-item nav-link active" href="{% url 'proveedores' %}">Proveedores </a>
+             <a class="nav-item nav-link active" href="{% url 'inicio' %}">Info </a>
          </div>
      </nav>
 
